feat: Complete rebranding from Nero to TalentLens across the codebase and documentation
- Updated all references from "Nero" to "TalentLens" in documentation, UI clients, and code.
- Added Docker setup guide for development environments.
- Created a data consistency verification script to ensure integrity across database operations.
- Updated package.json and package-lock.json to reflect new project name.
- Enhanced README with new links and documentation structure.
- Added rebranding documentation detailing changes made.

--- a/clients/shared/package.json
+++ b/clients/shared/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nero-shared",
+  "name": "talentlens-shared",
   "version": "1.0.0",
-  "description": "Shared utilities and services for Nero Skill Trainer",
+  "description": "Shared utilities and services for TalentLens",
   "main": "index.js",
   "scripts": {
     "install-deps": "npm install"
