--- a/clients/teacher-ui/package.json
+++ b/clients/teacher-ui/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "nero-teacher-ui",
+  "name": "talentlens-teacher-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3002",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start -p 3002",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
