--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   postgres:
     image: postgres:13
@@ -59,17 +57,53 @@ services:
       timeout: 10s
       retries: 3
 
-  frontend:
+  student-ui:
     build:
-      context: ./frontend
+      context: ./clients/student-ui
       dockerfile: Dockerfile
-    container_name: talentlens_frontend
+    container_name: talentlens_student_ui
     volumes:
-      - ./frontend:/app
+      - ./clients/student-ui:/app
       - /app/node_modules
       - /app/.next
     ports:
       - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:8000/api
+      - NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
+    depends_on:
+      - backend
+    command: npm run dev
+
+  teacher-ui:
+    build:
+      context: ./clients/teacher-ui
+      dockerfile: Dockerfile
+    container_name: talentlens_teacher_ui
+    volumes:
+      - ./clients/teacher-ui:/app
+      - /app/node_modules
+      - /app/.next
+    ports:
+      - "3001:3001"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:8000/api
+      - NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
+    depends_on:
+      - backend
+    command: npm run dev
+
+  admin-ui:
+    build:
+      context: ./clients/admin-ui
+      dockerfile: Dockerfile
+    container_name: talentlens_admin_ui
+    volumes:
+      - ./clients/admin-ui:/app
+      - /app/node_modules
+      - /app/.next
+    ports:
+      - "3002:3002"
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:8000/api
       - NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
