--- a/clients/admin-ui/Dockerfile
+++ b/clients/admin-ui/Dockerfile
@@ -7,13 +7,14 @@ WORKDIR /app
 RUN apk add --no-cache \
     python3 \
     make \
-    g++
+    g++ \
+    curl
 
 # Copy package files
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
 
 # Copy source code
 COPY . .
