feat: Add comprehensive frontend documentation and implementation status
- Introduced FRONTEND_README.md detailing features, tech stack, project structure, and getting started instructions.
- Created IMPLEMENTATION_STATUS.md to track completed tasks, current issues, and next steps for the project.
- Added NON_DOCKERIZED_README.md for setting up the development environment without Docker, including PostgreSQL and UI applications.
- Organized Python dependency files in requirements directory with backend, dev, and prod specifications.
- Implemented setup scripts for PostgreSQL and project initialization, enhancing the development setup process.
- Updated environment variable management for better configuration handling.
- Deprecated legacy startup script in favor of a new, improved development script.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,21 +1,4 @@
 services:
-  postgres:
-    image: postgres:13
-    container_name: talentlens_postgres_dev
-    environment:
-      POSTGRES_DB: talentlens_dev
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data_dev:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   redis:
     image: redis:6-alpine
     container_name: talentlens_redis_dev
@@ -41,18 +24,14 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - ./backend/.env
+      - ./config/local.env
     environment:
       - DEBUG=True
-      - DB_HOST=postgres
       - REDIS_URL=redis://redis:6379/0
     depends_on:
-      postgres:
-        condition: service_healthy
       redis:
         condition: service_healthy
 
 volumes:
-  postgres_data_dev:
   redis_data_dev:
   media_volume_dev:
